logs/pecan-wtforms.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Mako-1.0.7.egg-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/WTForms-2.1.egg-info'...
Listing './lib/python3.5/site-packages/WebOb-1.8.0rc1.dist-info'...
Listing './lib/python3.5/site-packages/WebTest-2.0.29.dist-info'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/logutils'...
Listing './lib/python3.5/site-packages/logutils-0.3.5.egg-info'...
Listing './lib/python3.5/site-packages/mako'...
Listing './lib/python3.5/site-packages/mako/ext'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pecan'...
Listing './lib/python3.5/site-packages/pecan/commands'...
Listing './lib/python3.5/site-packages/pecan/compat'...
Listing './lib/python3.5/site-packages/pecan/ext'...
Listing './lib/python3.5/site-packages/pecan/middleware'...
Listing './lib/python3.5/site-packages/pecan/scaffolds'...
Listing './lib/python3.5/site-packages/pecan/scaffolds/base'...
Listing './lib/python3.5/site-packages/pecan/scaffolds/base/+package+'...
Listing './lib/python3.5/site-packages/pecan/scaffolds/base/+package+/controllers'...
Listing './lib/python3.5/site-packages/pecan/scaffolds/base/+package+/model'...
Listing './lib/python3.5/site-packages/pecan/scaffolds/base/+package+/templates'...
Listing './lib/python3.5/site-packages/pecan/scaffolds/base/+package+/tests'...
Listing './lib/python3.5/site-packages/pecan/scaffolds/base/public'...
Listing './lib/python3.5/site-packages/pecan/scaffolds/base/public/css'...
Listing './lib/python3.5/site-packages/pecan/scaffolds/base/public/images'...
Listing './lib/python3.5/site-packages/pecan/scaffolds/rest-api'...
Listing './lib/python3.5/site-packages/pecan/scaffolds/rest-api/+package+'...
Listing './lib/python3.5/site-packages/pecan/scaffolds/rest-api/+package+/controllers'...
Listing './lib/python3.5/site-packages/pecan/scaffolds/rest-api/+package+/model'...
Listing './lib/python3.5/site-packages/pecan/scaffolds/rest-api/+package+/tests'...
Listing './lib/python3.5/site-packages/pecan/tests'...
Listing './lib/python3.5/site-packages/pecan/tests/config_fixtures'...
Listing './lib/python3.5/site-packages/pecan/tests/config_fixtures/bad'...
Listing './lib/python3.5/site-packages/pecan/tests/middleware'...
Listing './lib/python3.5/site-packages/pecan/tests/middleware/static_fixtures'...
Listing './lib/python3.5/site-packages/pecan/tests/scaffold_fixtures'...
Listing './lib/python3.5/site-packages/pecan/tests/scaffold_fixtures/content_sub'...
Listing './lib/python3.5/site-packages/pecan/tests/scaffold_fixtures/content_sub/bar'...
Listing './lib/python3.5/site-packages/pecan/tests/scaffold_fixtures/file_sub'...
Listing './lib/python3.5/site-packages/pecan/tests/scaffold_fixtures/file_sub/bar_+package+'...
Listing './lib/python3.5/site-packages/pecan/tests/scaffold_fixtures/simple'...
Listing './lib/python3.5/site-packages/pecan/tests/scaffold_fixtures/simple/bar'...
Listing './lib/python3.5/site-packages/pecan/tests/templates'...
Listing './lib/python3.5/site-packages/pecan-1.2.1.egg-info'...
Listing './lib/python3.5/site-packages/pecan_wtforms'...
Listing './lib/python3.5/site-packages/pecan_wtforms/tests'...
Compiling './lib/python3.5/site-packages/pecan_wtforms/tests/test_decorator.py'...
***   File "./lib/python3.5/site-packages/pecan_wtforms/tests/test_decorator.py", line 205
    print kw
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pecan_wtforms-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/waitress'...
Listing './lib/python3.5/site-packages/waitress/tests'...
Listing './lib/python3.5/site-packages/waitress/tests/fixtureapps'...
Listing './lib/python3.5/site-packages/waitress-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/webob'...
Listing './lib/python3.5/site-packages/webtest'...
Listing './lib/python3.5/site-packages/wtforms'...
Listing './lib/python3.5/site-packages/wtforms/csrf'...
Listing './lib/python3.5/site-packages/wtforms/ext'...
Listing './lib/python3.5/site-packages/wtforms/ext/appengine'...
Listing './lib/python3.5/site-packages/wtforms/ext/csrf'...
Listing './lib/python3.5/site-packages/wtforms/ext/dateutil'...
Listing './lib/python3.5/site-packages/wtforms/ext/django'...
Listing './lib/python3.5/site-packages/wtforms/ext/django/templatetags'...
Listing './lib/python3.5/site-packages/wtforms/ext/i18n'...
Listing './lib/python3.5/site-packages/wtforms/ext/sqlalchemy'...
Listing './lib/python3.5/site-packages/wtforms/fields'...
Listing './lib/python3.5/site-packages/wtforms/locale'...
Listing './lib/python3.5/site-packages/wtforms/locale/ar'...
Listing './lib/python3.5/site-packages/wtforms/locale/ar/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/ca'...
Listing './lib/python3.5/site-packages/wtforms/locale/ca/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/cs_CZ'...
Listing './lib/python3.5/site-packages/wtforms/locale/cs_CZ/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/cy'...
Listing './lib/python3.5/site-packages/wtforms/locale/cy/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/de'...
Listing './lib/python3.5/site-packages/wtforms/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/de_CH'...
Listing './lib/python3.5/site-packages/wtforms/locale/de_CH/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/el'...
Listing './lib/python3.5/site-packages/wtforms/locale/el/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/en'...
Listing './lib/python3.5/site-packages/wtforms/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/es'...
Listing './lib/python3.5/site-packages/wtforms/locale/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/et'...
Listing './lib/python3.5/site-packages/wtforms/locale/et/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/fa'...
Listing './lib/python3.5/site-packages/wtforms/locale/fa/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/fr'...
Listing './lib/python3.5/site-packages/wtforms/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/it'...
Listing './lib/python3.5/site-packages/wtforms/locale/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/ja'...
Listing './lib/python3.5/site-packages/wtforms/locale/ja/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/ko'...
Listing './lib/python3.5/site-packages/wtforms/locale/ko/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/nb'...
Listing './lib/python3.5/site-packages/wtforms/locale/nb/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/nl'...
Listing './lib/python3.5/site-packages/wtforms/locale/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/pl'...
Listing './lib/python3.5/site-packages/wtforms/locale/pl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/pt'...
Listing './lib/python3.5/site-packages/wtforms/locale/pt/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/ru'...
Listing './lib/python3.5/site-packages/wtforms/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/uk'...
Listing './lib/python3.5/site-packages/wtforms/locale/uk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/zh'...
Listing './lib/python3.5/site-packages/wtforms/locale/zh/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/zh_TW'...
Listing './lib/python3.5/site-packages/wtforms/locale/zh_TW/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/widgets'...
Listing './share'...
Listing './share/python-wheels'...
